[package]
name = "predikit"
version = "0.1.0"
edition = "2021"
description = "Refinement types: a value carried with a compile-time proof that it satisfies a predicate — parse, don't validate, as a type. no_std, zero-dependency."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MerlijnW70/predikit"
keywords = ["refinement", "types", "invariant", "const-fn", "no-std"]
categories = ["no-std", "rust-patterns", "data-structures"]
readme = "README.md"

[dependencies]
